<resources>
    <string name="app_name">ParkingReservation</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="existing_user_go_to_sign_in_page">Existing user! Go to Sign in page</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="reserve">Reserve</string>
    <string name="picture_of_the_city">Picture of the City</string>
    <string name="choose_date_time">Choose date and time for reservation</string>
    <string name="reservation_for">Reservation For</string>
    <string name="choose_date">Choose Date:</string>
    <string name="choose_time">Choose Time:</string>
    <string name="make_a_reservation">Make a reservation</string>
    <string name="proceed">Proceed</string>
    <string name="city_photo">City Photo</string>
    <string name="how_many_hours">How many hours:</string>
    <string name="reservation_success">Reservation success</string>
    <string name="navigate">Navigate</string>
    <string name="title_activity_navigation">Map</string>
    <string name="open_map">Open Map</string>

    <string-array name="hours">
        <item>00:00 – 01:00</item>
        <item>01:00 – 02:00</item>
        <item>02:00 – 03:00</item>
        <item>03:00 – 04:00</item>
        <item>04:00 – 05:00</item>
        <item>05:00 – 06:00</item>
        <item>06:00 – 07:00</item>
        <item>07:00 – 08:00</item>
        <item>08:00 – 09:00</item>
        <item>09:00 – 10:00</item>
        <item>10:00 – 11:00</item>
        <item>11:00 – 12:00</item>
        <item>12:00 – 13:00</item>
        <item>13:00 – 14:00</item>
        <item>14:00 – 15:00</item>
        <item>15:00 – 16:00</item>
        <item>16:00 – 17:00</item>
        <item>17:00 – 18:00</item>
        <item>18:00 – 19:00</item>
        <item>19:00 – 20:00</item>
        <item>20:00 – 21:00</item>
        <item>21:00 – 22:00</item>
        <item>22:00 – 23:00</item>
        <item>23:00 – 24:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time:</string>
    <string name="info">Info</string>
</resources>