<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/success_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/reservation_success"/>

    <TextView
        android:id="@+id/chosen_parking_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/success_message"/>

    <Button
        android:id="@+id/button_navigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/chosen_parking_name"/>

    <Button
        android:id="@+id/button_open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_map"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_navigate"/>

</RelativeLayout>