<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationFragment1">

    <TextView
        android:id="@+id/date_text_fragment_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:text="@string/choose_date"/>

    <DatePicker
        android:id="@+id/date_widget_fragment_1"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_text_fragment_1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/time_text_fragment_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/date_widget_fragment_1"
        android:textSize="20sp"
        android:text="@string/time"/>

    <Spinner
        android:id="@+id/spinner_fragment_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/time_text_fragment_1"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@id/spinner_fragment_1"
        android:text="@string/proceed"/>

</RelativeLayout>